--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="BENİM DANIŞMANLIK, ustası olduğunuz meslekte sizleri belgelendirme için danışmalıklarını sağlar ve sizleri en kısa sürede devlet destekli sertifika sahibi yapar.">
+    <meta name="keywords" content="myk, MYK, mesleki yeterlilik, MESLEKİ YETERLİLİK, T.C. Aile ve Sosyal Hizmetler Bakanlığı, aile ve sosyal hizmetler bakanlığı, teşvikli belge, danışmalık, ücretsiz, hızlı, kolay, ustalık belgesi, belge, ustalık, işçi, iş belgesi, iş ilanı, haber, katar, almanya, rusya">
     <meta name="author" content="">
     <title>MAHMUT ERTAŞ</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
