--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="BENİM DANIŞMANLIK, ustası olduğunuz meslekte sizleri belgelendirme için danışmalıklarını sağlar ve sizleri en kısa sürede devlet destekli sertifika sahibi yapar.">
     <meta name="keywords" content="myk, MYK, mesleki yeterlilik, MESLEKİ YETERLİLİK, T.C. Aile ve Sosyal Hizmetler Bakanlığı, aile ve sosyal hizmetler bakanlığı, teşvikli belge, danışmalık, ücretsiz, hızlı, kolay, ustalık belgesi, belge, ustalık, işçi, iş belgesi, iş ilanı, haber, katar, almanya, rusya">
-    <meta name="author" content="">
+    <meta name="author" content="MAHMUT ERTAŞ">
     <title>MAHMUT ERTAŞ</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
@@ -59,17 +59,12 @@
                 </div>
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
-                        <li class="active"><a href="index.html">Home</a></li>
-                        <li class="dropdown"><a href="#">Pages <i class="fa fa-angle-down"></i></a>
+                        <li class="active"><a href="index.html">Anasayfa</a></li>
+                        <li class="dropdown"><a href="#">Sayfalar <i class="fa fa-angle-down"></i></a>
                             <ul role="menu" class="sub-menu">
-                                <li><a href="aboutus.html">About</a></li>
-                                <li><a href="aboutus2.html">About 2</a></li>
-                                <li><a href="service.html">Services</a></li>
-                                <li><a href="pricing.html">Pricing</a></li>
-                                <li><a href="contact.html">Contact us</a></li>
-                                <li><a href="contact2.html">Contact us 2</a></li>
-                                <li><a href="404.html">404 error</a></li>
-                                <li><a href="coming-soon.html">Coming Soon</a></li>
+                                <li><a href="aboutus.html">Hakkımda</a></li>
+                                <li><a href="service.html">Meslekler</a></li>
+                                <li><a href="contact.html">İletişim</a></li>
                             </ul>
                         </li>
                         <li class="dropdown"><a href="blog.html">Blog <i class="fa fa-angle-down"></i></a>
