--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                 <div class="collapse navbar-collapse">
                     <ul class="nav navbar-nav navbar-right">
                         <li class="active"><a href="index.html">Anasayfa</a></li>
-                        <li class="dropdown"><a href="aboutus.html">Hakkımızda<i class="fa fa-angle-down"></i></a></li>
-                        <li class="dropdown"><a href="service.html">Meslekler<i class="fa fa-angle-down"></i></a></li>
-                        <li class="dropdown"><a href="contact.html">İletişim<i class="fa fa-angle-down"></i></a></li>
+                        <li class="dropdown"><a href="aboutus.html">Hakkımızda</a></li>
+                        <li class="dropdown"><a href="service.html">Meslekler</i></a></li>
+                        <li class="dropdown"><a href="contact.html">İletişim</i></a></li>
                     </ul>
                 </div>
                 <div class="search">
