--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="BENİM DANIŞMANLIK, ustası olduğunuz meslekte sizleri belgelendirme için danışmalıklarını sağlar ve sizleri en kısa sürede devlet destekli sertifika sahibi yapar.">
     <meta name="keywords" content="myk, MYK, mesleki yeterlilik, MESLEKİ YETERLİLİK, T.C. Aile ve Sosyal Hizmetler Bakanlığı, aile ve sosyal hizmetler bakanlığı, teşvikli belge, danışmalık, ücretsiz, hızlı, kolay, ustalık belgesi, belge, ustalık, işçi, iş belgesi, iş ilanı, haber, katar, almanya, rusya">
     <meta name="author" content="MAHMUT ERTAŞ">
-    <title>BİZİM DANIŞMANLIK</title>
+    <title>BENİM DANIŞMANLIK</title>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/animate.min.css" rel="stylesheet">
