--- a/index.html
+++ b/index.html
@@ -32,10 +32,9 @@
                 <div class="col-sm-12 overflow">
                    <div class="social-icons pull-right">
                         <ul class="nav nav-pills">
-                            <li><a href=""><i class="fa fa-facebook"></i></a></li>
-                            <li><a href=""><i class="fa fa-twitter"></i></a></li>
-                            <li><a href=""><i class="fa fa-whatsapp"></i></a></li>
-                            <li><a href=""><i class="fa fa-linkedin"></i></a></li>
+                            <li><a href="https://www.facebook.com/mahmut.ertas.5494"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://wa.me/message/BFBUFA3Y5CPUG1"><i class="fa fa-whatsapp"></i></a></li>
+                            <li><a href="https://www.linkedin.com/in/mahmut-erta%C5%9F-922a03105"><i class="fa fa-linkedin"></i></a></li>
                         </ul>
                     </div>
                 </div>
@@ -82,8 +81,9 @@
             <div class="row">
                 <div class="main-slider">
                     <div class="slide-text">
-                        <h1>We Are Creative Nerds</h1>
-                        <p>Boudin doner frankfurter pig. Cow shank bresaola pork loin tri-tip tongue venison pork belly meatloaf short loin landjaeger biltong beef ribs shankle chicken andouille.</p>
+                        <h1>Mesleki Yeterlilik ve Hijyen Belgesine Mi İhtiyacın Var ?</h1>
+                        <p>BENİM DANIŞMANLIK bu konuda size yardımcı olabilir.Peki nasıl mı?</p>
+                        <p>Toplam 65 farklı meslekte sizin için gerekli olan sertifikaları belirler ve en kısa sürede sizi akredite kurumlardan uluslararası geçerliliğe sahip bir belge almanıza yardımcı olur.</p>
                         <a href="#" class="btn btn-common">SIGN UP</a>
                     </div>
                     <img src="images/home/slider/hill1.png" class="slider-hill" alt="slider image">
