--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                         <h1>Mesleki Yeterlilik ve Hijyen Belgesine Mi İhtiyacın Var ?</h1>
                         <p>BENİM DANIŞMANLIK bu konuda size yardımcı olabilir.Peki nasıl mı?</p>
                         <p>Toplam 65 farklı meslekte sizin için gerekli olan sertifikaları belirler ve en kısa sürede sizi akredite kurumlardan uluslararası geçerliliğe sahip bir belge almanıza yardımcı olur.</p>
-                        <a href="#" class="btn btn-common">SIGN UP</a>
+                        <a href="#" class="btn btn-common">İLETİŞİM</a>
                     </div>
                     <img src="images/home/slider/hill1.png" class="slider-hill" alt="slider image">
                     <img src="images/home/slider/house.png" class="slider-house" alt="slider image">
