--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
             <div class="row">
                 <div class="main-slider">
                     <div class="slide-text">
-                        <h1>Mesleki Yeterlilik ve Hijyen Belgesine Mi İhtiyacın Var ?</h1>
-                        <p>BENİM DANIŞMANLIK bu konuda size yardımcı olabilir.Peki nasıl mı?</p>
+                        <h1>Mesleki Yeterlilik, Eğitim, Hijyen ve Enerji Verimlilik Belgesine Mi İhtiyacın Var ?</h1>
+                        <p>BENİM DANIŞMANLIK bu konuda size yardımcı olabilir.<h4>PEKİ NASIL MI ?</h4></p>
                         <p>Toplam 65 farklı meslekte sizin için gerekli olan sertifikaları belirler ve en kısa sürede sizi akredite kurumlardan uluslararası geçerliliğe sahip bir belge almanıza yardımcı olur.</p>
                         <a href="#" class="btn btn-common">İLETİŞİM</a>
                     </div>
