--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                         <li class="active"><a href="index.html">Anasayfa</a></li>
                         <li class="dropdown"><a href="aboutus.html">Hakkımızda</a></li>
                         <li class="dropdown"><a href="service.html">Meslekler</i></a></li>
-                        <li class="dropdown"><a href="contact.html">İletişim</i></a></li>
+                        <li class="dropdown"><a href="#contact">İletişim</i></a></li>
                     </ul>
                 </div>
                 <div class="search">
@@ -83,7 +83,7 @@
                     <div class="slide-text">
                         <h1>Mesleki Yeterlilik, Eğitim, Hijyen ve Enerji Verimlilik Belgesine Mi İhtiyacın Var ?</h1>
                         <p>BENİM DANIŞMANLIK bu konuda size yardımcı olabilir.PEKİ NASIL MI ? Toplam 65 farklı meslekte sizin için gerekli olan sertifikaları belirler ve en kısa sürede sizi akredite kurumlardan uluslararası geçerliliğe sahip bir belge almanıza yardımcı olur.</p>
-                        <a href="#" class="btn btn-common">İLETİŞİM</a>
+                        <a href="#contact" class="btn btn-common">İLETİŞİM</a>
                     </div>
                     <img src="images/home/slider/hill1.png" class="slider-hill" alt="slider image">
                     <img src="images/home/slider/house.png" class="slider-house" alt="slider image">
@@ -253,7 +253,7 @@
                 </div>
                 <div class="col-md-3 col-sm-6">
                     <div class="contact-info bottom">
-                        <h2>Contacts</h2>
+                        <a name="contact"></a><h2>Contacts</h2>
                         <address>
                         E-mail: <a href="mailto:someone@example.com">email@email.com</a> <br>
                         Phone: +1 (123) 456 7890 <br>
