--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                 <div class="main-slider">
                     <div class="slide-text">
                         <h1>Mesleki Yeterlilik, Eğitim, Hijyen ve Enerji Verimlilik Belgesine Mi İhtiyacın Var ?</h1>
-                        <p>BENİM DANIŞMANLIK bu konuda size yardımcı olabilir.PEKİ NASIL MI ? Toplam 65 farklı meslekte sizin için gerekli olan sertifikaları belirler ve en kısa sürede sizi akredite kurumlardan uluslararası geçerliliğe sahip bir belge almanıza yardımcı olur.</p>
+                        <p>BENİM DANIŞMANLIK bu konuda size yardımcı olabilir.Peki nasıl mı? Toplam 65 farklı meslekte sizin için gerekli olan sertifikaları belirler ve en kısa sürede sizi akredite kurumlardan uluslararası geçerliliğe sahip bir belge almanıza yardımcı olur.</p>
                         <a href="#contact" class="btn btn-common">İLETİŞİM</a>
                     </div>
                     <img src="images/home/slider/hill1.png" class="slider-hill" alt="slider image">
