--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
             <div class="row">
                 <div class="main-slider">
                     <div class="slide-text">
-                        <h1>Mesleki Yeterlilik, Eğitim, Hijyen ve Enerji Verimlilik Belgesine Mi İhtiyacın Var ?</h1>
+                        <h1>Mesleki Yeterlilik, Mesleki Eğitim, Hijyen ve Enerji Verimlilik Belgesine Mi İhtiyacın Var ?</h1>
                         <p>BENİM DANIŞMANLIK bu konuda size yardımcı olabilir.Peki nasıl mı? Toplam 65 farklı meslekte sizin için gerekli olan sertifikaları belirler ve en kısa sürede sizi akredite kurumlardan uluslararası geçerliliğe sahip bir belge almanıza yardımcı olur.</p>
                         <a href="#contact" class="btn btn-common">İLETİŞİM</a>
                     </div>
