--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@
                 </div>
                 <div class="col-sm-12">
                     <div class="copyright-text text-center">
-                        <p>&copy; Your Company 2014. All Rights Reserved.</p>
-                        <p>Designed by <a target="_blank" href="http://www.themeum.com">Themeum</a></p>
+                        <p>&copy; BENİM DANIŞMANLIK</p>
+                        <p>Designed by <a target="_blank" href="https://twitter.com/0xc137">0xc137</a></p>
                     </div>
                 </div>
             </div>
