--- a/index.html
+++ b/index.html
@@ -228,7 +228,7 @@
                 <div class="col-sm-12 text-center bottom-separator">
                     <img src="images/home/under.png" class="img-responsive inline" alt="">
                 </div>
-                <div class="col-md-3 col-sm-6">
+                <div class="col-md-4 col-sm-12">
                     <div class="contact-info bottom">
                         <a name="contact"></a><h2>İletişim</h2>
                         <address>
@@ -245,7 +245,7 @@
                                 <input type="text" name="name" class="form-control" required="required" placeholder="Ad-Soyad">
                             </div>
                             <div class="form-group">
-                                <input type="email" name="email" class="form-control" required="required" placeholder="e-mail">
+                                <input type="email" name="email" class="form-control" required="required" placeholder="E-mail">
                             </div>
                             <div class="form-group">
                                 <textarea name="message" id="message" required="required" class="form-control" rows="8" placeholder="İçerik"></textarea>
