--- a/index.html
+++ b/index.html
@@ -234,6 +234,19 @@
                         E-mail: <a href="mailto:mahmut.ertasmyk@gmail.com">mahmut.ertasmyk@gmail.com</a> <br>
                         GSM: +90 (552) 231-0067 <br>
                         </address>
+                        <div class="container">
+                            <div class="row">
+                                <div class="col-sm-12 overflow">
+                                   <div class="social-icons pull-right">
+                                        <ul class="nav nav-pills">
+                                            <li><a href="https://www.facebook.com/mahmut.ertas.5494"><i class="fa fa-facebook"></i></a></li>
+                                            <li><a href="https://wa.me/message/BFBUFA3Y5CPUG1"><i class="fa fa-whatsapp"></i></a></li>
+                                            <li><a href="https://www.linkedin.com/in/mahmut-erta%C5%9F-922a03105"><i class="fa fa-linkedin"></i></a></li>
+                                        </ul>
+                                    </div>
+                                </div>
+                             </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-12">
