--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@
                         </address>
                     </div>
                 </div>
+                <center>
                 <div class="col-md-4 col-sm-12">
                     <div class="contact-form bottom">
                         <h2>Mesaj Bırakabilirsin</h2>
@@ -255,6 +256,7 @@
                         </form>
                     </div>
                 </div>
+              </center>
                 <div class="col-sm-12">
                     <div class="copyright-text text-center">
                         <p>&copy; BENİM DANIŞMANLIK</p>
