--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
         </div>
      </section>
     <!--/#clients-->
-
+<center>
     <footer id="footer">
         <div class="container">
             <div class="row">
@@ -266,6 +266,7 @@
             </div>
         </div>
     </footer>
+</center>
     <!--/#footer-->
 
     <script type="text/javascript" src="js/jquery.js"></script>
