--- a/index.html
+++ b/index.html
@@ -63,18 +63,21 @@
                         <!--<li class="dropdown"><a href="#contact" onclick="popupToggle();">İletişim</i></a></li>-->
                         <li class="dropdown"><a onclick="popupToggle();">İletişim</i></a></li>
                         <div id="popup">
-                          <div class="content">
-                            <div class="row">
-                                <div class="col-sm-12 overflow">
-                                   <div class="social-icons pull-right">
-                                        <ul class="nav nav-pills">
-                                            <li><a href="https://www.facebook.com/mahmut.ertas.5494"><i class="fa fa-facebook"></i></a></li>
-                                            <li><a href="https://wa.me/message/BFBUFA3Y5CPUG1"><i class="fa fa-whatsapp"></i></a></li>
-                                            <li><a href="https://www.linkedin.com/in/mahmut-erta%C5%9F-922a03105"><i class="fa fa-linkedin"></i></a></li>
-                                        </ul>
+                          <div class="overlay"></div>
+                            <div class="content">
+                              <div class="close-btn" onclick="popupToggle()">&times;</div>
+                                <h1>İletişim Adresleri</h1>
+                                <div class="row">
+                                    <div class="col-sm-12 overflow">
+                                       <div class="social-icons pull-right">
+                                            <ul class="nav nav-pills">
+                                                <li><a href="https://www.facebook.com/mahmut.ertas.5494"><i class="fa fa-facebook"></i></a></li>
+                                                <li><a href="https://wa.me/message/BFBUFA3Y5CPUG1"><i class="fa fa-whatsapp"></i></a></li>
+                                                <li><a href="https://www.linkedin.com/in/mahmut-erta%C5%9F-922a03105"><i class="fa fa-linkedin"></i></a></li>
+                                            </ul>
+                                        </div>
                                     </div>
-                                </div>
-                             </div>
+                                 </div>
                           </div>
                         </div>
                         <script>
