--- a/index.html
+++ b/index.html
@@ -66,14 +66,9 @@
                           <div class="overlay"></div>
                             <div class="content">
                               <div class="close-btn" onclick="popupToggle()">&times;</div>
-                                <h1>İletişim Adresleri</h1>
-                                <div class="col-md-3 col-sm-6">
-                                    <div class="contact-info bottom">
-                                        <address>
+                                <h1>İletişim Adresleri</h1><br>
                                         E-mail: <a href="mailto:mahmut.ertasmyk@gmail.com">mahmut.ertasmyk@gmail.com</a> <br>
-                                        GSM: +90 (552) 231-0067 <br>
-                                        </address>
-                                    </div>
+                                        GSM: <a href="callto:+905522310067">Hemen Ara</a> <br>
                                 </div>
                                 <br>
                                 <div class="row">
