--- a/index.html
+++ b/index.html
@@ -66,9 +66,9 @@
                           <div class="overlay"></div>
                             <div class="content">
                               <div class="close-btn" onclick="popupToggle()">&times;</div>
-                                <h1>İletişim Adresleri</h1><br>
+                                <h1>İletişim Adresleri</h1>
                                         E-mail: <a href="mailto:mahmut.ertasmyk@gmail.com">mahmut.ertasmyk@gmail.com</a> <br>
-                                        GSM: <a href="callto:+905522310067">Hemen Ara</a> <br>
+                                        GSM: <a href="tel:+905522310067">Hemen Ara</a> <br>
                                 </div>
                                 <br>
                                 <div class="row">
