--- a/index.html
+++ b/index.html
@@ -67,13 +67,19 @@
                             <div class="content">
                               <div class="close-btn" onclick="popupToggle()">&times;</div>
                                 <h1>İletişim Adresleri</h1>
-                                </div>
+                                <br>
                                 <div class="row">
                                     <div class="col-sm-12 overflow">
                                        <div class="social-icons pull-right">
+                                             <div class="col-md-3 col-sm-6">
+                                                 <div class="contact-info bottom">
+                                                     <address>
+                                                     E-mail: <a href="mailto:mahmut.ertasmyk@gmail.com">mahmut.ertasmyk@gmail.com</a> <br>
+                                                     GSM: <a href="tel:+905522310067">Hemen Ara</a> <br>
+                                                     </address>
+                                                 </div>
+                                             </div>
                                             <ul class="nav nav-pills">
-                                                E-mail: <a href="mailto:mahmut.ertasmyk@gmail.com">mahmut.ertasmyk@gmail.com</a><br>
-                                                GSM: <a href="tel:+905522310067">Hemen Ara</a> <br>
                                                 <li><a href="https://www.facebook.com/mahmut.ertas.5494"><i class="fa fa-facebook"></i></a></li>
                                                 <li><a href="https://wa.me/message/BFBUFA3Y5CPUG1"><i class="fa fa-whatsapp"></i></a></li>
                                                 <li><a href="https://www.linkedin.com/in/mahmut-erta%C5%9F-922a03105"><i class="fa fa-linkedin"></i></a></li>
