--- a/index.html
+++ b/index.html
@@ -71,19 +71,18 @@
                                 <div class="row">
                                     <div class="col-sm-12 overflow">
                                        <div class="social-icons pull-right">
-                                             <div class="col-md-3 col-sm-6">
-                                                 <div class="contact-info bottom">
-                                                     <address>
-                                                     E-mail: <a href="mailto:mahmut.ertasmyk@gmail.com">mahmut.ertasmyk@gmail.com</a> <br>
-                                                     GSM: <a href="tel:+905522310067">Hemen Ara</a> <br>
-                                                     </address>
+                                             <div class="col-md-12 overflow">
+                                                 <div class="contact-info overflow">
+                                                     <a href="mailto:mahmut.ertasmyk@gmail.com">mahmut.ertasmyk@gmail.com</a> <br><a href="tel:+905522310067">Hemen Ara</a> <br>
                                                  </div>
                                              </div>
-                                            <ul class="nav nav-pills">
+                                            <div class="col-md-12 col-sm-1">
+                                              <ul class="nav nav-pills">
                                                 <li><a href="https://www.facebook.com/mahmut.ertas.5494"><i class="fa fa-facebook"></i></a></li>
                                                 <li><a href="https://wa.me/message/BFBUFA3Y5CPUG1"><i class="fa fa-whatsapp"></i></a></li>
                                                 <li><a href="https://www.linkedin.com/in/mahmut-erta%C5%9F-922a03105"><i class="fa fa-linkedin"></i></a></li>
                                             </ul>
+                                          </div>
                                         </div>
                                     </div>
                                  </div>
